# ftx

./: .cppcheck  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt  cppcheck-suppressions.txt  crc.cpp  crc.hpp  main.cpp  xfer.cpp  xfer.hpp
.github/: copilot-instructions.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
include/: crc.hpp  ftdi.hpp  gdb_stub.hpp  log.hpp  mainpage.doxygen  platform.hpp  saturn.hpp  xfer.hpp
satcom_lib/: satcart.h  sc_common.c  sc_common.h  sc_compress.c  sc_compress.h  sc_file.h  sc_global_data.h  sc_rom_code.h  sc_romfs.c  sc_romfs.h  sc_saturn.c  sc_saturn.h
satcom_lib/SBL/INCLUDE/: SEGA_BUP.H  SEGA_INT.H  SEGA_SYS.H  SEGA_TIM.H  SEGA_XPT.H
satcom_lib/copystub/: BART.LNK  GO.BAT  Makefile  copystub.c  copystub.h  copystub_inc.c  copystub_inc.h  sat_cmd.bat  test.bat
satcom_lib/debugger/: scd_circbuffer.inc.c  scd_common.h
satcom_lib/iapetus/: iapetus.c  iapetus.h  readme.txt  types.h
satcom_lib/iapetus/ar/: commlink.c  commlink.h
satcom_lib/iapetus/cd/: cd.c  cd.h  cdfs.c  cdfs.h  cdsect.c  mpeg.c  mpeg.h
satcom_lib/iapetus/examples/: exhello.c
satcom_lib/iapetus/peripherals/: smpc.c  smpc.h
satcom_lib/iapetus/scu/: dsp.c
satcom_lib/iapetus/sh2/: timer.c
satcom_lib/iapetus/ui/: font.c  gui.c  gui.h  text.c  text.h
satcom_lib/iapetus/video/: pal.h  scrscr.c  vdpinit.c
satcom_lib/lzf/: Marc Lehmann's LibLZF.URL
satcom_lib/satregs/: readme.txt  satregs.h  scu.h  smpc.h  ubc.h  vdp1.h  vdp2.h
satcom_lib/sdcard/: sdcard.h  sdcard_fat.c  sdcard_packet.c
satcom_lib/sdcard/FAT_MOUNT_UTILITY/: Tools and utilities for Windows.URL  imdiskinst.7z
satcom_lib/sdcard/fat_io_lib/: example.c  fat_access.c  fat_cache.c  fat_filelib.c  fat_filelib.h  fat_format.c  fat_global.c  fat_global.h  fat_internal.c  fat_internal.h  fat_list.c  fat_list.h  fat_misc.c  fat_opts.h  fat_string.c  fat_table.c  fat_write.c  tests.c
src/: crc.cpp  ftdi.cpp  ftdi_console.cpp  ftdi_discovery.cpp  ftdi_gdb.cpp  ftdi_init.cpp  ftdi_webdav.cpp  ftx.cpp  ftx.rc  main.cpp  xfer.cpp
